--- a/Day1/1.Overview-And-Setup/2.Installation.md
+++ b/Day1/1.Overview-And-Setup/2.Installation.md
@@ -17,5 +17,9 @@ Go for Visual Studio Code is extension developed by go team at google, install t
 # Update Go Tools for Visual Studio Code.
 Go Tools can be updated by selecting "Show All Commands" Option from help menu or Command + Shift + P for Mac, Control + Shift + P for Windows, search for "Go:Install/Update Tools" and select option, Select and update all tools.
 
+## That's all!! Now you are all set to explore.
+
+# Happy Coding !!
+
 
 
