Committing .md files

--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/2.Datatype.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/2.Datatype.md
@@ -60,4 +60,20 @@ Agrregate types are the collection of  datatypes, Array and Struct are aggregate
     department string
     salary float64.
 
-    We will se its details in further sections
+    We will see its details in later sections
+
+## Reference Datatypes
+    Go has a collection reference datatypes, they are very handy in application development.
+1. Pointer
+    Pointer is a variable that holds the address of another variable, using this reference variable we can access, modify value of the variable. Pointers have many major applications and act as performance fine tuner. We will see more on this in detailed section on pointers and call by reference functions.
+2. Slice
+    Slice is a dynamic list,  can expand and shrink, can be accessed like a simple array. Slice is very powerful tool for application development. Lets see in detailed section on Slice.
+3. Map
+    Map a hash implementation, map maintains a key value pair. Its read and write access are fast and efficient. Lets discuss in detailed section on Maps
+4. Function
+    Function is a clock of code and acts as data type as well, function can be passed as argument to a function and returned from the funtion. Function taking function as a parameter or returning functions are known as higher order function. Can be compaired to function pointers in C, C++. Lets discuss more on this in functions section
+5. Channels
+    Channles are the communication pipes across go routines. Channels are the sole of golang. Go's ability of concurrency is powered by channels. We habe both buffered and unbuffered channels. Lets discuss in detail on this in Concurrency section.
+
+    Next Topic: Vatiables
+
