committing source code and .md

--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
@@ -31,4 +31,129 @@ Variables are declared using the keywork "var"
         Interface datatype, It would be very premature to discuss this here, we will take this up in Interface section
     
 ## Other ways of declaring variables.
+1. Delcaring Multiple variables.
+
+    syntax:
+    
+    var <v1>, <v2>, <v3> <datatype> = <value1>, <value2>, <value3>
+
+    declare varaibles <v1>, <v2> and <v3> of type <datatype> and assigns <value1>, <value2> and <value3>
+
+    example
+    var v1, v2, v3 int = 100, 200, 300
+
+    declares v1, v2 and v3 of type int and assigns 100, 200 and 300 accordingly.
+
+    exmaple
+
+    var v1, v2, v3  int
+
+    declares v1, v2 and v3 of the type int and assigns 0
+
+    
+
+2. Declaring multiple variables of different types.
+Go lets you to declare multiple variables of different datatypes.
+
+    syntax:
+    
+    var v1, v2, v3 = <value1>, <value2>, <value3>
+    here type of <value1>, <value2> and <value3> are different
+
+    Example:
+
+    var v1, v2, v3 = 100, true, "Hello"
+
+    type of v1 is int and value stored is 100.
+    type of v2 is bool and value stored is true.
+    type of v3 is string and value stored is string.
+
+## Rules with variable naming
+1. Variable names must begin with a letter or an underscore(_). And the names may contain the letters ‘a-z’ or ’A-Z’ or digits 0-9 as well as the character ‘_’.
+
+2. A variable name should not start with a digit.
+
+3. The name of the variable is case sensitive.
+
+4. Keywords is not allowed to use as a variable name.
+
+5. There is no limit on the length of the name of the variable, but it is advisable to use an optimum length of 4 – 15 letters only.
+
+
+## Scope of the variable
+
+Scope of the variable can be defined as the part of the program where it is accessible. If variable is accessible inside a block, its scope is local to block. If variable is accessible within a finction, is scope is local to a function. If variable is accessible across a package, it's scope is package. If variable is accessible across all part of the code, it's scope is global.
+
+Variables can be classified as.
+1. Local Variables
+    1. Block variable [Accessible within specific block, if block, else block, for loop, or any custome block]
+    2. Function variable [Accessible across the function]
+    
+    Example:
+    package main
+
+    import "fmt"
+
+    func main() {
+	    fmt.Println("Demo: Local Variable")
+
+	    var a = 10 // Variable is acessible across main function
+	    // It is scope is local to the function
+	    fmt.Println("Value of a is ", a)
+	    {
+		    var b = 100 // scope of b is local to block
+		    fmt.Println("Value of b is ", b)
+	    }
+
+	    //fmt.Println("Value of block variable is", b) //Uncommenting this line will lead to error
+	    fmt.Println("Valiue of a is", a) // As a is local to a function it can be accessed across function
+    }
+
+
+2. Gloabal Varaibles
+    1. Package Variable [Acessible within the package]
+    2. Global Variable [Accessible across complete code]
+
+    package main
+
+    import "fmt"
+
+    // WelcomeMessage is global variable
+    var welcomeMessage = "Hello and Welcome to Golang training Day1"
+
+    func main() {
+	    fmt.Println("Demo Global Variable")
+	    fmt.Println("This is WelcomeMessage ", welcomeMessage)
+	    //Calling Test,
+	    testFunc()  
+    }
+
+    func testFunc() {
+	    fmt.Println("Printing Welcome Message from test function", welcomeMessage)
+    }
+
+NOTE: If a global variable name in package is in capital letters then it is exported or in other words it can be accessed across the function.
+
+## Short Declaration Operator (:=)
+(:=) is a short variable declaration operator it can be used to delcarelocal variables. Global variables can't be declared using sdo (Short Declaration Operator)
+
+    Synatax 
+         <Variable-Name> := <Value>
+         a variable with name <Variable-Name> with type of <Value> is declared and <Value> is stored.
+
+        Example 1:
+            a := 100
+           variable with name a with type int is declared and 100 is stored
+
+        Example 2:
+            a, b := 10, 20
+
+            variables with name a and b with type int are declared amd 10, 20 are stored respectively.
         
+        Example 3:
+
+            v1, v2, v3 := 100, true, 10.5
+
+            variables with name v1, v2, v3 with type int, bool and float64 are declared and 100, true and 10.5 are stored respectively.
+        
+
