--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
@@ -90,47 +90,47 @@ Variables can be classified as.
     2. Function variable [Accessible across the function]
     
     Example:
-    package main
+        package main
 
-    import "fmt"
+        import "fmt"
 
-    func main() {
-	    fmt.Println("Demo: Local Variable")
+        func main() {
+	        fmt.Println("Demo: Local Variable")
 
-	    var a = 10 // Variable is acessible across main function
-	    // It is scope is local to the function
-	    fmt.Println("Value of a is ", a)
-	    {
-		    var b = 100 // scope of b is local to block
-		    fmt.Println("Value of b is ", b)
-	    }
+	        var a = 10 // Variable is acessible across main function
+	        // It is scope is local to the function
+	        fmt.Println("Value of a is ", a)
+	        {
+		        var b = 100 // scope of b is local to block
+		        fmt.Println("Value of b is ", b)
+	        }
 
-	    //fmt.Println("Value of block variable is", b) //Uncommenting this line will lead to error
-	    fmt.Println("Valiue of a is", a) // As a is local to a function it can be accessed across function
-    }
+	        //fmt.Println("Value of block variable is", b) //Uncommenting this line will lead to error
+	        fmt.Println("Valiue of a is", a) // As a is local to a function it can be accessed across function
+        }
 
 
 2. Gloabal Varaibles
     1. Package Variable [Acessible within the package]
     2. Global Variable [Accessible across complete code]
 
-    package main
+        package main
 
-    import "fmt"
+        import "fmt"
 
-    // WelcomeMessage is global variable
-    var welcomeMessage = "Hello and Welcome to Golang training Day1"
+        // WelcomeMessage is global variable
+        var welcomeMessage = "Hello and Welcome to Golang training Day1"
 
-    func main() {
-	    fmt.Println("Demo Global Variable")
-	    fmt.Println("This is WelcomeMessage ", welcomeMessage)
-	    //Calling Test,
-	    testFunc()  
-    }
+        func main() {
+	        fmt.Println("Demo Global Variable")
+	        fmt.Println("This is WelcomeMessage ", welcomeMessage)
+	        //Calling testFunc(),
+	        testFunc()  
+        }
 
-    func testFunc() {
-	    fmt.Println("Printing Welcome Message from test function", welcomeMessage)
-    }
+        func testFunc() {
+	      fmt.Println("Printing Welcome Message from test function", welcomeMessage)
+        }
 
 NOTE: If a global variable name in package is in capital letters then it is exported or in other words it can be accessed across the function.
 
@@ -155,5 +155,18 @@ NOTE: If a global variable name in package is in capital letters then it is expo
             v1, v2, v3 := 100, true, 10.5
 
             variables with name v1, v2, v3 with type int, bool and float64 are declared and 100, true and 10.5 are stored respectively.
+
+        package main
+
+        import "fmt"
+
+        func main() {
+	        fmt.Println("Demo: Short declaration operator")
+	        a := 100
+	        fmt.Println(a)
+	        b, c, d := 10, true, "Welcome to go training"
+	        fmt.Println(b, c, d)
+        }
+
         
 
