--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/3.variables.md
@@ -134,10 +134,55 @@ Variables can be classified as.
 
 NOTE: If a global variable name in package is in capital letters then it is exported or in other words it can be accessed across the function.
 
+## Variable block
+Variables can be declared in block as below
+        var(
+            a int = 100
+            b string = "hello"
+            c float  = 1.45
+            d, e = true, 'h'
+        )
+
+    Example: Local variable block
+        package main
+
+        import "fmt"
+
+        func main() {
+            fmt.Println("Demo:Variable Block")
+            var (
+                a    int    = 100
+                b    string = "Hello"
+                c, d int    = 200, 300
+                e, f        = true, 10.5
+                g           = 'h'
+            )
+
+            fmt.Println(a, b, c, d, e, f, g)
+        }
+    Example: Variable Block Global
+
+        package main
+
+        import "fmt"
+
+        var (
+            a    int = 100
+            b, c int = 200, 300
+            d, e     = 400, 500
+            f, g     = true, "Example from go training"
+            h        = 'H'
+        )
+
+        func main() {
+            fmt.Println("Demo: Variable Blok Global")
+            fmt.Println(a, b, c, d, e, f, g, h)
+        }
+
 ## Short Declaration Operator (:=)
 (:=) is a short variable declaration operator it can be used to delcarelocal variables. Global variables can't be declared using sdo (Short Declaration Operator)
 
-    Synatax 
+    Syntax 
          <Variable-Name> := <Value>
          a variable with name <Variable-Name> with type of <Value> is declared and <Value> is stored.
 
@@ -168,5 +213,5 @@ NOTE: If a global variable name in package is in capital letters then it is expo
 	        fmt.Println(b, c, d)
         }
 
-        
+Next Topic: Constants
 
