--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/1.keywords.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/1.keywords.md
@@ -50,4 +50,6 @@ switch keyword is used to implement a multiple option switch case
 24. type
 type keyword is used define user defined types, structres and interfaces
 25. var
-var keyword id used to define variables
+var keyword id used to define variables.
+
+Next topic: Datatypes.
