--- a/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/5.Operators.md
+++ b/Day1/3.Keywords-DataTypes-Variables-Constants-Operator/5.Operators.md
@@ -45,9 +45,9 @@ Assignment operators assigns the values from operands to oparand. (=), (+=), (-=
 1. == (equal to)
 2. != (not equal to)
 3. < (less than)
-4. > (greater than)
+4. \> (greater than)
 5. <= (less than or equal to)
-6. >= (greater than or equal to)
+6. \>= (greater than or equal to)
 
         Example: 
                 package main
